# arm-playground

./: .gitignore  README.md
01_assembly/: Makefile  README.md  simple.S  simple.as
02_plain_c/: Makefile  README.md  simple.c
03_bluepill-rust/: Cargo.toml  README.md  memory.x
03_bluepill-rust/.cargo/: config
common/: common.mk  openocd-jlink.gdb  openocd-stellaris.gdb  stm32ram.ld
