[package]
authors = ["Damjan Georgievski <gdamjan@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "bluepill-blink"
version = "0.1.0"

[dependencies]
stm32f1xx-hal = { version = "0.4", features = ["rt", "stm32f103" ] }
cortex-m = "0.6"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
panic-semihosting = "0.5"
void = { version = "1", default_features = false }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
